Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6816

libzfs_load_module() not exported in future ZFS release

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.7.0
    • 3
    • 9223372036854775807

      zfs_init() currently calls libzfs_load_module(), which is no longer externally visible in ZFS master.

      The intent of the call to libzfs_load_module apparently is to make zfs_init() fail silently if libzfs is not installed, but fail with an error message if libzfs is installed but initialization fails. However it's not clear how this could ever work.

      In addition, I believe this could be better addressed by not reporting errors during probing, but instead reporting them only after osd_is_lustre() fails.

      A patch will be submitted to remove the invalid call, and a separate ticket for the revamp of the osd initialization error handling.

            jay Jinshan Xiong (Inactive)
            ofaaland Olaf Faaland
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: